--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <h1>Balance</h1>
-      <span>0$</span>
+      <span id="balance">0$</span>
     </header>
     <section>
       <h3>Breakdown</h3>
@@ -35,6 +35,6 @@
       </select>
       <button>Add</button>
     </footer>
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
