Update value for income

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <footer>
       <input type="number" placeholder="0$" />
       <select name="" id="">
-        <option value="expense">+ Income</option>
+        <option value="income">+ Income</option>
         <option value="expense">- Expense</option>
       </select>
       <button>Add</button>
